--- a/app.less
+++ b/app.less
@@ -45,3 +45,19 @@
 .nav, .pagination, .carousel a { cursor: pointer; }
 /* pointer on ng-click */
 [ng-click], [data-ng-click], [x-ng-click] { cursor: pointer; }
+
+// css de juan
+[ave-default-election] .adminhead {
+    .navbar-toggle {
+        border-color: #ddd;
+    }
+    .icon-bar {
+        background-color: #ccc;
+    }
+    .navbar-collapse li {
+        background-color: #2C3E50;
+    }
+    [av-change-lang] li {
+        color: white;
+    }
+}
